<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
	<string name="app_name">Apprends le français</string>
	
	//level check
	<string name="level_zero">I\'m new to French</string>
	<string name="level_basic">I know some words and phrases</string>
	<string name="level_intermediate">I can have simple conversations</string>
	<string name="level_advanced">I am intermediate or higher</string>
	<string name="level_notation">How much French do you know?</string>
	<string name="level_continue">CONTINUE</string>
	
	//start test
	<string name="test_title">Let\'s test your level</string>
	<string name="test_subtitle">This short test is a simple and accurate way to make sure you start from the right place</string>
	<string name="test_submit_btn">START TEST</string>
	<string name="test_cancel">CANCEL</string>
	
	//quiz test
	<string name="quiz_diamond">1</string>
	<string name="quiz_love">4</string>
	<string name="quiz_skip">SKIP</string>
	<string name="quiz_check">CHECK</string>
	
	//gem added
	<string name="gem_number">512</string>
	<string name="gem_title">You earned 12 gems !</string>
	<string name="gem_subtitle">Don\'t spend them all in one place</string>
	
	//quiz success
	<string name="quiz_success">Congratulations !</string>
	
	//quiz failure
	<string name="quiz_failure">Wrong Answer</string>
	<string name="quiz_message">Je suis un garcon.</string>
	<string name="quiz_operation">GOT IT</string>
	<string name="quiz_operation_message">You have win 1 diamond</string>
	<string name="quiz_error_message">You have lost 1 diamond</string>
	
	//mistake cost for wrong answer
	<string name="mistake_title">Each mistake costs 1 heart.</string>
	<string name="mistake_subtitle">Stay sharp and focused to keep your hearts.You got this.</string>
	<string name="mistake_operation">KEEP GOING</string>
	
	//Out of hearts
	<string name="refill_heartTitle">You ran out of heart.</string>
	<string name="refill_heartSubTitle">But you\'re still new here, so here\'s a free refill.</string>
	<string name="refill_continue">REFILL FOR FREE</string>
	
	//Lesson Complete
	<string name="lesson_complete_title">Lesson Completed</string>
	<string name="lesson_complete_totalXP">TOTAL XP</string>
	<string name="lesson_complete_totalXPNumber">18</string>
	<string name="lesson_complete_speedyNumber">32.29</string>
	<string name="lesson_complete_speedy">SPEEDY</string>
	<string name="lesson_complete_result">GOOD</string>
	<string name="lesson_complete_resultRemark">80%</string>
	
	//Lesson Complete
	<string name="dashboard_challenge">1</string>
	<string name="dashboard_diamond">510</string>
	
	//Dashboard Data
	<string name="lesson_dataHeading">Unit 1</string>
	<string name="lesson_dataSubHeading">Use basic phrases,greet people</string>
	
	
	
	
	<string name="title_home" tools:ignore="MissingTranslation" />
	<string name="title_dashboard" tools:ignore="MissingTranslation" />
	<string name="title_notifications" tools:ignore="MissingTranslation" />
	<string name="app_closing_dialog">Do you want to close app?</string>
	<string name="learn_grammar_easily">LEARN GRAMMAR EASILY</string>
	<string name="english_grammar">ENGLISH</string>
	<string name="english_grammar_lastname">LEARN FRENCH</string>
	<string name="title_activity_navigation_test">NavigationTest</string>
	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>
	<string name="drawer_subtitle">Get our many apps from playstore</string>
	<string name="grammar_punctuation">PUNCTUATION</string>
	<string name="grammar_punctuation_subtitle">Learn basic Punctuation</string>
	<string name="grammar_vocabulary_subtitle">Learn new words</string>
	
	<string name="rate_app">Rate App</string>
	<string name="keyboardview_keycode_cancel">Cancel</string>
	<string name="loving_app">We\'d greatly appreciate if you can rate us.</string>
	<string name="rateapp">Rate</string>
	
	
	<!--Favorite Items-->
	<string name="favourite_items_clicked_operations">Okay</string>
	<string name="favourite_items_clicked_information"> Grammar list is added to favorites list. </string>
	<string name="favourite_items_clicked_errors_info"> Already added this in favorites list </string>
	<string name="favourite_items_clicked_header"> Added </string>
	<string name="unfavourite_items_clicked_information"> News removed from favorites list </string>
	<string name="unfavourite_items_clicked_header"> Deleted </string>
	<string name="fav_list">Favourite Lists</string>
	
	
	
	
	<!--	grammar_dashboard-->
	<string name="grammar_affirmative">AFFIRMATIVE_NEGATIVE</string>
	<string name="grammar_agreement">AGREEMENT</string>
	<string name="grammar_article">ARTICLE</string>
	<string name="grammar_causativeverb">CAUSTIVE_VERB</string>
	<string name="grammar_conditional">CONDITIONAL</string>
	<string name="grammar_connectives">CONNECTIVES</string>
	<string name="grammar_correcttenses">CORRECT_TENSES</string>
	<string name="grammar_preposition">PREPOSITION</string>
	<string name="grammar_pronouns">PRONOUN</string>
	<string name="grammar_questiontag">QUESTION_TAG</string>
	<string name="grammar_sentencestransformation">SENTENCES_TRANSFORMATION</string>
	<string name="dashboard_sentencestructure">SENTENCES</string>
	<string name="dashboard_sentencestructure_subheading">Learn to make variety of sentences</string>
	
	<string name="grammar_speech">SPEECH</string>
	<string name="voice_change">VOICE_CHANGE</string>
	<string name="processing">Processing..</string>
	
	<string name="grammar_list">Grammar List</string>
	<string name="writing_list">Writing List</string>
	
	<string name="confused_word">Confused Words</string>
	<string name="vocab_word">Vocabulary</string>
	
	<string name="sentence_structure">Sentence Structure</string>
	<string name="writting_content_type">Writting</string>
	<string name="writting_letter_heading">Letters</string>
	<string name="writting_letter_structure">Structure</string>
	
	<string name="writting_full_address">Your Full Address</string>
	<string name="writting_date_of_letter">Date of the letter</string>
	<string name="writting_personName">Name of the person to whom you are writing.Their full postal address</string>
	<string name="writting_greeting">Dear [Name of recipient]</string>
	<string name="writting_subject">The subject of the letter</string>
	<string name="writting_letter_content">The text of the letter</string>
	<string name="writting_letter_final_word">Yours sincerely</string>
	<string name="writting_letter_signature">[Sign in this space]</string>
	<string name="writting_letter_fullname">[Your full name] ([your title: Mr, Mrs, Ms])</string>
	
	<!--	<string name="admob_app_id">ca-app-pub-4495347473978505~8623299351</string>-->
	
	<string name="admob_app_id">ca-app-pub-3940256099942544/5224354917</string>
	
	
	<string name="punctuation_title">Punctuation</string>
	<string name="punctuation_name">Punctuation Name</string>
	<string name="punctuation_maingist">Punctuation Gist</string>
	
	<string name="dashoard_bottom_sheet_privatepolicy">Privacy Policy</string>
	<string name="dashoard_bottom_sheet_aboutUs">Product Info</string>
	
	<string name="vocab_list">Vocabulary List</string>
	
	<string name="verb_name">Verb Name:</string>
	<string name="similar_words">Meanings</string>
	<string name="sentence_structure_formula">Formula</string>
	
	<string name="introd">Introduction</string>
	<string name="firstparagraph">First Paragraph:</string>
	<string name="sndparagraph">Second Paragraph:</string>
	<string name="thdparagraph">Third Paragraph:</string>
	
	<string name="list">List:</string>
	
	
	<string name="example">Example:</string>
	<string name="dissection">Dissection:</string>
	<string name="sentence">Sentence:</string>
	<string name="word_mneumonics">Mneumonic Word</string>
	<string name="word_related">Remember this Word:</string>
	<string name="similar_related">Similar Words</string>
	<string name="personal_email">sapkotamadhav500@gmail.com</string>
	<string name="title_activity_interstial_ad">InterstialAdActivity</string>
	<string name="action_settings">Settings</string>
	<string name="productInfo_subtitle">English Grammar app (Minimum Viable Product) is developed to make all  grammar things easily available.Further Features will be brought out soon.
		Stay Updated!</string>
	<string name="developer_name">Sapkota</string>
	<string name="word_level1">Level I</string>
	<string name="word_level2">Level II</string>
	<string name="word_level3">Level III</string>
	<string name="word_level4">Level IV</string>
	<string name="word_level5">Level V</string>
	<string name="word_level6">Level VI</string>
	<string name="word_level7">Level VII</string>
	<string name="word_level8">Level VIII</string>
	<string name="word_level9">Level IX</string>
	<string name="word_level10">Level X</string>
	
	
	<string name="version">Version:1.01</string>
	
	<string name="interstitial_ad_sample">Interstitial Ad Sample</string>
	<string name="start_level">Level 1</string>
	<string name="next_level">Next Level</string>
	<!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
	<string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>

</resources>
